MainFragment: Add Advanced Server Settings
Which will contains

Server URL Edit
Server PORT Edit
Server Auto-Checking[KDNAPP-3]
Server Auto-Checking Time Interval[KDNAPP-4]
Manual Server update Preference

Resolves: KDNAPP-5

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,7 @@
 
     <!-- Notification Blacklist -->
     <string name="blacklist_title">Add Notification Blacklist</string>
+
+    <!-- Advanced Server Settings -->
+    <string name="advanced_server_category">Advanced Server Settings</string>
 </resources>
