MainFragment: Add option to adjust auto-update interval
Resolves: KDNA-5

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,5 @@
     <!-- Advanced: Auto server checking -->
     <string name="enable_auto_checking">Enable Auto Checking</string>
     <string name="enable_auto_checking_summary">Server availability check support</string>
+    <string name="auto_checking_interval">Auto Checking Interval</string>
 </resources>
